add evidence+ report api
